--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-# Welcome
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Biplab's Blog</title>
+	<link rel="shortcut icon" href="/favicon.ico">
+</head>
+<body>
+<h1>Welcome to </h1>
+
+</body>
+</html> Welcome
 
 Docker :
 
