--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Biplab's Blog</title>
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
 <h1>Welcome to </h1>
